# otn-node

./: CMakeLists.txt
genesis/: genesis.mainnet.json  genesis.testnet.json
libraries/app/: api.cpp  application.cpp
libraries/app/include/graphene/app/: api.hpp
libraries/chain/: account_evaluator.cpp  asset_evaluator.cpp  confidential_evaluator.cpp  db_init.cpp
libraries/chain/include/graphene/chain/: config.hpp
libraries/chain/include/graphene/chain/protocol/: account.hpp
libraries/chain/protocol/: fee_schedule.cpp  transaction.cpp
libraries/wallet/: wallet.cpp
programs/: CMakeLists.txt
programs/transaction_serializer/: CMakeLists.txt  main.cpp
programs/witness_node/: main.cpp
tests/common/: database_fixture.cpp  database_fixture.hpp
tests/tests/: authority_tests.cpp  block_tests.cpp  confidential_tests.cpp  database_tests.cpp  fee_tests.cpp  history_api_tests.cpp  market_tests.cpp  operation_tests.cpp  operation_tests2.cpp  swan_tests.cpp  uia_tests.cpp
